--- a/index.html
+++ b/index.html
@@ -13,10 +13,11 @@
     <div class="container">
         <div class="myInfo">
             <h1>Scanner Project</h1>
-            <h2>Ahmed Sabry</h2>
+            <h2>Ahmed Sabry Ahmed Mousa</h2>
             <h3>Section 1</h3>
-            <h2>Mohamed Elkhafef</h2>
+            <h2>Mohamed Ahmed Mohamed Elkhafef</h2>
             <h3>Section 3</h3>
+<h5><span>NOTE</span> : you must separate between any token by at least one space </h5>
         </div>
         <div class="inputC">
             <label for="langCInput" id="langC">input programming language</label>
